重构异常体系并全量中文化清理代码注释与日志，合并演示工程并增强控制层代码生成能力
- 剥离并新增独立配置、数据源及代码生成异常，替换全局陈旧的异常抛出链路
- 深度清洗项目内所有英文注释与日志为纯中文，统一测试类的文档排版与作者署名
- 废弃冗余的插件测试工程并将其合并至 Demo 模块，提供完整的全链路演示
- 强化 Controller 生成器，提供完整的增删改查方法并接入 RESTful 及 GET 策略配置
- 新增项目专属 Agent Skill 文档，为后续 AI 助手提供接入与使用指引